test/Fail/UnquoteCommitTC.err
UnquoteCommitTC.agda:8.1-10.11: error: [Unquote.CommitAfterDef]
Cannot use commitTC after declaring new definitions
